Fixed divider colours in dark mode

--- a/app/assets/stylesheets/theme/dark.css
+++ b/app/assets/stylesheets/theme/dark.css
@@ -31,6 +31,8 @@ html, body {
   --header-color: rgb(129, 129, 230);
   --header-overlay-element-color: #09c1ff;
 
+  --divider-color: #665858;
+
   --form-background: #281d1d;
   --modal-footer-background: #373737;
 
