--- a/app/assets/stylesheets/ui/buttons/actions.css
+++ b/app/assets/stylesheets/ui/buttons/actions.css
@@ -1,34 +1,25 @@
 .actions {
-	line-height: 19px;
-}
-span.actions, div.actions {
   display: flex;
+	line-height: 19px;
+  gap: 4px;
 }
 
 .action[disabled] {
-    opacity: 0.3;
-    pointer-events: none;
+  opacity: 0.3;
+  pointer-events: none;
 }
 
 .actions > .button,
 .actions > button,
 .actions > .split-button {
-  margin-right: 4px;
-  margin-top: 4px;
   white-space: nowrap;
 }
 
-.actions > .button:last-child,
-.actions > button:last-child,
-.actions > .split-button:last-child {
-  margin-right: 0px;
-}
-
 .actions .divider {
-  max-height: 30px;
-  height: 100%;
+  display: flex;
   border-left: 1px solid var(--divider-color);
   margin: 0 10px;
+  align-self: stretch;
 }
 .actions .spacer {
   flex-grow: 1;
