--- a/app/assets/stylesheets/ui/tags/tags.css
+++ b/app/assets/stylesheets/ui/tags/tags.css
@@ -34,7 +34,7 @@
 
 .tags.artist-tags {
   display: inline-block;
-  border-right: solid 1px rgba(0,0,150, 0.3);
+  border-right: solid 1px var(--divider-color);
   padding-right: 5px;
   margin-right: 5px;
 }
